fix flow type errors

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "oforce-pizza",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://trbngr.github.io/oforce-pizza-client",
   "dependencies": {
     "bootstrap": "4.0.0",
     "flow-bin": "^0.69.0",
@@ -24,6 +25,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "flow": "flow"
+    "flow": "flow",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
